fix wrapp  text

--- a/assets/styles/pages/_journey-result-page.scss
+++ b/assets/styles/pages/_journey-result-page.scss
@@ -4,7 +4,11 @@
 
 .journey-answers .govuk-summary-list__value:last-child{
 
-    width: 17%;
+    width: 15%;
+}
+
+.journey-answers .govuk-summary-list__value:last-child a{
+  white-space:nowrap;
 }
 .govuk-summary-list{
   margin: 0;
